<resources>
    <string name="app_name">ReLaunch</string>
    <string name="app_ok">OK</string>
    <string name="app_cancel">Cancel</string>
    <string name="app_yes">Yes</string>
    <string name="app_no">No</string>
    <string name="app_none">None</string>
    <string name="jv_relaunch_default">Default</string>
    <string name="jv_relaunch_other">Other</string>
    <string name="app_and">AND</string>
    <string name="main_launcher_nb_layout_go_one_level_up">Parent Folder</string>
    <string name="jv_relaunch_prev">Prev</string>
    <string name="jv_relaunch_next">Next</string>
    <string name="jv_relaunch_m_free">M Free</string>
    <string name="jv_relaunch_wifi_is_off">∅ Wi-Fi</string>
    <string name="jv_relaunch_wifi_is_on">∗ Wi-Fi</string>
    <string name="jv_relaunch_home">Home Folders</string>
    <string name="jv_relaunch_lru">Recently Read</string>
    <string name="jv_relaunch_fav">Favorites</string>
    <string name="jv_relaunch_lru_a">Recently Used Applications</string>
    <string name="jv_relaunch_all_a">Applications</string>
    <string name="jv_relaunch_fav_a">Application Favorites</string>
    <string name="main_launcher_nb_layout_b">B</string>
    <string name="main_launcher_nb_layout_battery">Battery</string>
    <string name="main_launcher_nb_layout_mem">Memory:</string>
    <string name="main_launcher_nb_layout_memory">Memory</string>
    <string name="jv_relaunch_set_startdir"> ↸ Set as Home Folder</string>
    <string name="jv_relaunch_add_startdir"> ↹ Add to Home Folders</string>
    <string name="jv_relaunch_bookinfo"> ⓘ Book Information</string>
    <string name="jv_relaunch_add"> ★ Add to Favorites</string>
    <string name="jv_relaunch_mark"> ∈ Mark Read</string>
    <string name="jv_relaunch_unmark"> ∉ Mark Unread</string>
    <string name="jv_relaunch_unmarkall"> ∀ Mark All Unread</string>
    <string name="jv_relaunch_openwith"> ⇨ Open With…</string>
    <string name="jv_relaunch_createintent"> ⇰ Create Intent…</string>
    <string name="jv_relaunch_tags_rename"> ∷ Standardize Filename</string>
    <string name="jv_relaunch_create_folder"> ∗ New Folder</string>
    <string name="jv_relaunch_rename"> ⇴ Rename</string>
    <string name="jv_relaunch_copy"> ⇉ Copy</string>
    <string name="jv_relaunch_copy_dir"> ⇉ Copy Folder</string>
    <string name="jv_relaunch_move"> ⇢ Cut</string>
    <string name="jv_relaunch_paste"> ↷ Paste</string>
    <string name="jv_relaunch_delete"> ↛ Delete</string>
    <string name="jv_relaunch_delete_emp_dir"> ⇏ Delete Empty Folder</string>
    <string name="jv_relaunch_delete_non_emp_dir"> ⇏ Delete Folder and Contents</string>
    <string name="jv_relaunch_fileinfo"> ⚂ File Properties</string>
    <string name="jv_relaunch_selecte"> ⊙ Select</string>
    <string name="jv_relaunch_unselecte"> ∅ Deselect</string>
    <string name="jv_relaunch_return">Return  ▶</string>
    <string name="jv_relaunch_Dropbox">Dropbox ▶</string>
    <string name="jv_relaunch_add_Dropbox"> ⇾ Copy to Dropbox</string>
    <string name="jv_relaunch_add_dir_Dropbox"> ⇿ Copy to Dropbox Folder</string>
    <string name="jv_results_mark"> ∈ Mark Read</string>
    <string name="jv_results_unmark"> ∉ Mark Unread</string>
    <string name="jv_results_unmark_all"> ∀ Mark All Unread</string>
    <string name="jv_results_remove">☆ Remove from Favorites</string>
    <string name="jv_results_remove_last_opened"> ∅ Remove from Here</string>
    <string name="jv_results_delete_dir"> ↛ Delete Folder</string>
    <string name="jv_results_delete_file"> ↛ Delete File</string>
    <string name="jv_open_dir">↱ Open in Folder</string>
    <string name="jv_results_home_list_remove"> ∅ Remove from Here</string>
    <string name="jv_results_add_homedir"> ↸ Edit Home Folders</string>
    <string name="jv_results_move_up"> ▲ Move Up</string>
    <string name="jv_results_move_down"> ▼ Move Down</string>
    <string name="jv_allapp_move_up"> ▲ Move Up</string>
    <string name="jv_allapp_move_down"> ▼ Move Down</string>
    <string name="jv_allapp_add"> ★ Add to Favorites</string>
    <string name="jv_allapp_remove"> ☆ Remove from Favorites</string>
    <string name="jv_allapp_uninstall"> ∅ Uninstall</string>
    <string name="jv_relaunch_edit">Edit</string>
    <string name="jv_relaunch_fileunzip">Unzip</string>
    <string name="jv_relaunch_permission">Permissions</string>
    <string name="jv_relaunch_rewrite">Rewrite</string>
    <string name="db_link">Link Dropbox</string>
    <string name="db_unlink">Unlink Dropbox</string>
    <string name="str_uploadToDropbox">Upload to Dropbox</string>
    <string name="jv_relaunch_system">System  ▶</string>
    <string name="jv_relaunch_arrange">Arrange  ▶</string>
    <string name="jv_relaunch_file_operations">File Operations   ▶</string>
    <string name="search_layout_title">Search</string>
    <string name="search_layout_case_sensitive">Case-sensitive matching</string>
    <string name="search_layout_search_known">Known file types only</string>
    <string name="search_layout_sort_search">Results in alphabetical order</string>
    <string name="search_layout_search_as">Matching method</string>
    <string name="arr_search_as_values_substring">Exact Substring</string>
    <string name="arr_search_as_values_regexp">Regular Expression</string>
    <string name="search_layout_search_in">Matching element</string>
    <string name="arr_search_in_values_1">File Name</string>
    <string name="arr_search_in_values_2">File Folder Name</string>
    <string name="arr_search_in_values_3">Full Path</string>
    <string name="arr_search_in_values_4">Full Path Except File Name</string>
    <string name="search_layout_search_root">Look in</string>
    <string name="search_layout_search_root_comment">Separate multiple folders with a comma</string>
    <string name="search_layout_search_string">Search for</string>
    <string name="search_layout_search">Search</string>
    <string name="search_layout_show_all_books">Find All Files of Known Types</string>
    <string name="jv_search_in_progress">Search in Progress</string>
    <string name="jv_search_results">Search Results</string>
    <string name="jv_search_files_total">Files (Matched/Searched)</string>
    <string name="jv_advanced_title">Power Menu</string>
    <string name="advanced_layout_scan">Rescan</string>
    <string name="jv_advanced_turn_wifi_on">Enable</string>
    <string name="jv_advanced_turn_wifi_off">Disable</string>
    <string name="advanced_layout_switch_wifi_off">Disable</string>
    <string name="jv_advanced_turning_wifi_on">Enabling Wi-Fi…</string>
    <string name="jv_advanced_turning_wifi_off">Disabling Wi-Fi…</string>
    <string name="advanced_layout_setting_wifi">Setup Wi-Fi</string>
    <string name="jv_advanced_connected">Connected, IP:</string>
    <string name="jv_advanced_level">Signal:</string>
    <string name="jv_advanced_not_configured">Not Configured</string>
    <string name="jv_advanced_notrange">Not in Range, Remembered</string>
    <string name="jv_advanced_mount_diskspartitions">Partition Table</string>
    <string name="jv_advanced_mount_mountpoint">Point</string>
    <string name="jv_advanced_mount_FS">Type</string>
    <string name="jv_advanced_mount_total">Size</string>
    <string name="jv_advanced_mount_used">In Use</string>
    <string name="jv_advanced_mount_free">Free</string>
    <string name="jv_advanced_mount_rorw">Flags</string>
    <string name="jv_advanced_mount_ro">Read-only</string>
    <string name="jv_advanced_mount_rw" >RW</string>
    <string name="advanced_layout_lock">Lock</string>
    <string name="advanced_layout_reboot">Reboot</string>
    <string name="jv_advanced_reboot_confirm_title">Confirm Reboot</string>
    <string name="jv_advanced_reboot_confirm_text">Are you sure you want to restart your device?</string>
    <string name="reboot_layout_text">"Reboot in Progress

Please wait while the device
is being restarted…"</string>
    <string name="advanced_layout_poweroff">Power Off</string>
    <string name="jv_advanced_poweroff_confirm_title">Confirm Power Off</string>
    <string name="jv_advanced_poweroff_confirm_text">Are you sure you want to switch off your device?</string>
    <string name="poweroff_layout_text">"Powered Off

Please press the Power button
on the back to start again."</string>
    <string name="taskmanager_layout_memory">Memory:</string>
    <string name="jv_taskman_total">Total:</string>
    <string name="jv_taskman_free">Free:</string>
    <string name="taskmanager_layout_cpu">CPU:</string>
    <string name="taskmanager_layout_sort_by_size">Order by Memory Use</string>
    <string name="taskmanager_layout_sort_by_cpu">Order by CPU Load</string>
    <string name="taskmanager_layout_sort_by_alpha">Alphabetical Order</string>
    <string name="jv_taskman_tasks">Tasks</string>
    <string name="taskmanager_layout_tasks">Tasks</string>
    <string name="jv_taskman_services">Services</string>
    <string name="taskmanager_layout_services">Services</string>
    <string name="taskmanager_layout_wait">Please Wait…</string>
    <string name="jv_taskman_task_details">Task Details</string>
    <string name="task_details_layout_task_details">Task Details</string>
    <string name="task_details_layout_related_packages">Pertinent Packages</string>
    <string name="jv_taskman_cpu" />
    <string name="jv_taskman_mem" />
    <string name="jv_taskman_service_details">Service Details</string>
    <string name="service_details_layout_kill">Kill</string>
    <string name="service_details_layout_piduid">PID / User ID:</string>
    <string name="service_details_layout_label">Label:</string>
    <string name="service_details_layout_name">Name:</string>
    <string name="service_details_layout_flags">Flags:</string>
    <string name="service_details_layout_clients">Clients:</string>
    <string name="service_details_layout_package">Package:</string>
    <string name="service_details_layout_packlabel">Pkg Label:</string>
    <string name="service_details_layout_packdetails">Details:</string>
    <string name="viewer_layout_title">Viewer</string>
    <string name="editor_layout_viewtitle">Editor</string>
    <string name="viewer_layout_edit">Edit</string>
    <string name="editor_layout_save">Save</string>
    <string name="jv_editor_save_title">Save or Discard Changes</string>
    <string name="jv_editor_save_text">Do you want to save your changes?</string>
    <string name="jv_viewer_file_too_big">File Too Large to View</string>
    <string name="jv_viewer_file">The file</string>
    <string name="jv_viewer_too_big">cannot be opened because it is too large for the viewer</string>
    <string name="jv_viewer_bytes">kilobytes</string>
    <string name="jv_viewer_maximum">Maximum allowed size is</string>
    <string name="jv_editor_file_too_big">File Too Large to Edit</string>
    <string name="jv_editor_file">The file</string>
    <string name="jv_editor_too_big">cannot be opened because it is too large for the editor</string>
    <string name="jv_editor_bytes">kb</string>
    <string name="jv_editor_maximum">The size limit in kilobytes is</string>
    <string name="jv_editor_openerr_title">Error Opening File</string>
    <string name="jv_editor_openerr_text1">Cannot open file</string>
    <string name="jv_editor_openerr_text2">for writing</string>
    <string name="jv_editor_writerr_title">Write Error</string>
    <string name="jv_editor_writerr_text">Cannot write to file</string>
    <string name="jv_editor_closerr_title">Error Closing File</string>
    <string name="jv_editor_closerr_text">Cannot close file</string>
    <string name="jv_relaunch_fileinfo_name">Name:</string>
    <string name="jv_relaunch_fileinfo_size">Size:</string>
    <string name="prefs_layout_title">ReLaunch settings</string>
    <string name="types_view_layout_title">File Association Settings</string>
    <string name="jv_rla_see_changelog">About ReLaunch</string>
</resources>