<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/setting"
        android:icon="@drawable/relaunch_settings"
        android:title="@string/prefs_layout_title">
    </item>

    <item
        android:id="@+id/mime_types"
        android:icon="@drawable/ci_associations"
        android:title="@string/types_view_layout_title">
    </item>

    <item
        android:id="@+id/search"
        android:icon="@drawable/ci_search"
        android:title="@string/search_layout_title">
    </item>

    <item
        android:id="@+id/lastopened"
        android:icon="@drawable/ci_lre"
        android:title="@string/jv_relaunch_lru">
    </item>

    <item
        android:id="@+id/favorites"
        android:icon="@drawable/ci_fav"
        android:title="@string/jv_relaunch_fav">
    </item>

    <item
        android:id="@+id/about"
        android:icon="@drawable/ci_question"
        android:title="@string/jv_rla_see_changelog">
    </item>

</menu>